# omat

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
DOCUMENTATION/: mkdocs.yml
DOCUMENTATION/docs/: about.md  comments.md  examples.md  helloWorld.md  install.md  omatc.md  quick_overview.md  toolchain.md
docs/docs/: helloWorld.md  omat_by_example.md
oexp/: Cargo.toml
oexp/src/: arg.rs  main.rs
oexp/src/arg/: arg_runner.rs  config_json.rs  helper.rs
oexp/src/error/: error.rs
omatc/: Cargo.toml
omatc/src/: args.rs  ast.rs  main.rs
omatc/src/ast/: code.rs  expr.rs  ir.rs  parser.rs  scanner.rs  token.rs
omatc/src/error/: error.rs
omatc/src/parser/: mod.rs
omatc/src/runner/: mod.rs
opack/: Cargo.toml
opack/src/: arg.rs  main.rs
opack/src/arg/: argParser.rs  argRunner.rs  arg_parser.rs  arg_runner.rs  configJson.rs  config_json.rs  helper.rs
